--- a/near_coincidence/index.html
+++ b/near_coincidence/index.html
@@ -181,6 +181,7 @@
                 <option value="2" selected>2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
+                <option value="5">5</option>
             </select>
 
             <label for="pointSize">Base Layer Point Size (radius, px):</label>
